# umath

./: CMakeLists.txt  README.md  mkdocs.yaml
cmake/: umathConfig.cmake.in
docs/: contributing.md  faq.md  index.md  license.md
docs/getting-started/: cmake.md  installation.md  quickstart.md
docs/guides/: errors.md  parsing-formatting.md  rounding-scale.md
docs/reference/: compat.md  limits.md  representation.md
docs/types/: int128.md  numeric.md  numeric128.md  uint128.md
examples/: main.cpp
include/umath/: ExtendedInt.h  Int128.h  Numeric.h
src/umath/: plug.cpp
tests/: test_int128.cpp  test_int256.cpp  test_numerics.cpp
